--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,7 +15,6 @@
     "react-image-fade-in": "^1.1.3",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.0.6",
     "styled-components": "^5.3.5",
     "tsparticles": "^2.0.6",
@@ -49,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "react-scripts": "^5.0.1"
   }
 }
