--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dhaliwalg.github.io/dhaliwalg.github.io",
+  "homepage": "https://dhaliwalg.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
